@@ -1,5 +1,6 @@
 0.09
  - Fix doc for Snak 'datavalue' parameter.
+ - Fix sentences in doc of Wikibase::Datatype::Utils.
 
 0.08 2021-01-26T21:24:31+01:00
  - Rewrite example in doc for Mediainfo to some real.
